<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jw_interface_msgs</name>
  <version>0.0.0</version>
  <description>The jw_interface_msgs package</description>
  <maintainer email="yamato.ando@gmail.com">Yamato ANDO</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>std_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
