<?xml version="1.0"?>
<package format="3">
  <name>vehicle_control</name>
  <version>0.1.0</version>
  <description>Vehicle control using keyboard inputs</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>vehicle_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
