<?xml version="1.0"?>
<package format="3">
  <name>vehicle_interface</name>
  <version>0.1.0</version>
  <description>Vehicle control interface for serial communication</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
